--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "maestro-backend",
+  "name": "maestro",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.15.4",
+    "mongodb-runner": "^3.5.0",
+    "parse-server": "^2.5.3"
+  },
   "scripts": {}
 }
