--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "express": "^4.15.4",
     "mongodb-runner": "^3.5.0",
-    "parse-server": "^2.5.3"
+    "parse-server": "^2.5.3",
+    "vue-resource": "^1.3.4"
   },
   "scripts": {}
 }
