--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "vue-resource": "^1.3.4"
   },
   "config": {
-    "docker_file": "./config/dev/docker-compose.yml"
+    "docker_file": "./config/dev/docker-compose.yml",
+    "docker_file_prod": "./config/production/docker-compose.yml"
   },
   "scripts": {
     "docker:up": "./bin/up.sh $npm_package_config_docker_file",
+    "docker:up-prod": "./bin/up.sh $npm_package_config_docker_file_prod",
     "docker:suspend": "./bin/suspend.sh $npm_package_config_docker_file",
     "docker:ssh-web": "./bin/ssh.sh $npm_package_config_docker_file maestro-web || true",
     "docker:ssh-backend": "./bin/ssh.sh $npm_package_config_docker_file maestro-backend || true",
