--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,8 @@ after_script:
 after_success:
     - pip install --user awscli
     - export PATH=$PATH:$HOME/.local/bin
-    - eval $(awc ecr get-login --region us-west-2c)
-    - 'if [ "$TRAVIS_BRANCH" = "master" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ]; then npm run docker:up-prod fi'
+    - eval $(awc ecr get-login --region us-west-2)
+    - docker-compose build -f ./config/production/docker-compose.yml
+    - docker tag maestro/web:latest 272378791211.dkr.ecr.us-west-2.amazonaws.com/maestro/web:latest
+    - docker push 272378791211.dkr.ecr.us-west-2.amazonaws.com/maestro/web:latest
+    # - 'if [ "$TRAVIS_BRANCH" = "master" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ]; then npm run docker:up-prod fi'
