--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,4 @@ after_script:
     - npm run docker:destroy
 
 after_success:
-    - pip install --user awscli
-    - export PATH=$PATH:$HOME/.local/bin
-    - eval $(awc ecr get-login --region us-west-2)
-    - docker-compose build -f ./config/production/docker-compose.yml
-    - docker tag maestro/web:latest 272378791211.dkr.ecr.us-west-2.amazonaws.com/maestro/web:latest
-    - docker push 272378791211.dkr.ecr.us-west-2.amazonaws.com/maestro/web:latest
-    # - 'if [ "$TRAVIS_BRANCH" = "master" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ]; then npm run docker:up-prod fi'
+    - ./bin/push-latest.sh
