--- a/config/production/docker-compose.yml
+++ b/config/production/docker-compose.yml
@@ -5,9 +5,10 @@ services:
         image: abiosoft/caddy
         restart: always
         stdin_open: true
+        command: npm run dev
         tty: true
         ports:
-            - 80:80
+            - 4200:4200
         links:
             - maestro-backend
         volumes:
