Runs with docker

--- a/config/dev/docker-compose.yml
+++ b/config/dev/docker-compose.yml
@@ -5,17 +5,15 @@ services:
         image: abiosoft/caddy
         restart: always
         stdin_open: true
-        # command: npm run dev
         tty: true
         ports:
-            - 4200:4200
+            - 80:80
         links:
             - maestro-backend
         volumes:
             - ./caddy/Caddyfile:/etc/Caddyfile
             - caddy_data:/etc/caddycerts
-            # - ../../src:/var/www/maestro
-            - ../../src/public/app/config:/var/www/maestro/public
+            - ../../src:/var/www/maestro
             - ../../logs/caddy:/var/log/caddy
             - ../../logs/api:/var/log/api
         environment:
@@ -41,7 +39,7 @@ services:
             PARSE_SERVER_APPLICATION_ID: maestro
             PARSE_SERVER_MASTER_KEY: orange
             PARSE_SERVER_DATABASE_URI: mongodb://mongo-db:27017/dev
-            PARSE_SERVER_URL: http://maestro.gdn/parse
+            PARSE_SERVER_URL: http://maestro.dev/parse
             PARSE_SERVER_LOGS_FOLDER: /maestro/logs/parse
             VERBOSE: 1
 
