--- a/config/production/caddy/Caddyfile
+++ b/config/production/caddy/Caddyfile
@@ -1,5 +1,4 @@
-# maestro.gdn:80
-ec2-34-212-238-105.us-west-2.compute.amazonaws.com:80
+34.208.222.61:80, maestro.gdn:80, www.maestro.gdn:80
 
 root /var/www/maestro/public
 tls off
