--- a/config/dev/docker-compose.yml
+++ b/config/dev/docker-compose.yml
@@ -24,7 +24,10 @@ services:
 
     maestro-backend:
         image: node:alpine
-        command: node /maestro/backend/server.js
+        build:
+            context: ../../src/backend
+            dockerfile: backend
+        command: node /maestro/backend/app.js
         restart: always
         ports:
             - 3308:3308
