fixed TLS for IOS

--- a/config/dev/caddy/Caddyfile
+++ b/config/dev/caddy/Caddyfile
@@ -1,7 +1,7 @@
 maestro.dev:80
 
 root /var/www/maestro/public
-tls off
+tls aksendzoff@smu.edu
 gzip
 log /var/log/caddy/access.log
 errors /var/log/caddy/error.log
