--- a/config/production/caddy/Caddyfile
+++ b/config/production/caddy/Caddyfile
@@ -2,7 +2,7 @@
 ec2-34-212-238-105.us-west-2.compute.amazonaws.com:80
 
 root /var/www/maestro/public
-tls off
+tls aksendzoff@smu.edu
 gzip
 log /var/log/caddy/access.log
 errors /var/log/caddy/error.log
